--- a/forreal.html
+++ b/forreal.html
@@ -41,6 +41,11 @@ How old will it get before we start exposin' and shit?</p>
 </div>
 	</div>
 
+
+
+
+
+
 	<div id="budget">
 
 	<h2>Budget</h2>
@@ -58,6 +63,11 @@ You nothin' but a hater, hater, clout chaser
 <a href="">More Info</a>
 </div>
 </div>
+
+
+
+
+
 
 <div id="checkbooks">
 	<h2>Checkbooks</h2>
@@ -89,6 +99,9 @@ G's up hoes down
 
 
 
+<div id="nextthree">
+
+
 <div id="money">
 	<h2>Money</h2>
 	<p class="para">
@@ -112,77 +125,61 @@ I hope you shine lil' baby
 
 
 
+<div id="love">
+	<h2>Honey</h2>
+	<p class="para">
+
+You know time is of the essence
+Yeah I tried lil' baby
+Put your feelings to the side lil' baby
+You got too much pride lil' baby
+I ain't have time yesterday
+But today I got time lil' baby
+'Cause you been up on my mind lil' baby
+I really think you mines lil' baby
+I hope you shine lil' baby
+
+	</p>
+	<br>
+	<div class="moreinfo">
+<a href="">more info</a>
+</div>
+</div>
+
+
+<div id="hate">
+	<h2>Lovely</h2>
+	<p class="para">
+
+You know time is of the essence
+Yeah I tried lil' baby
+Put your feelings to the side lil' baby
+You got too much pride lil' baby
+I ain't have time yesterday
+But today I got time lil' baby
+'Cause you been up on my mind lil' baby
+I really think you mines lil' baby
+I hope you shine lil' baby
+
+	</p>
+	<br>
+	<div class="moreinfo">
+<a href="">more info</a>
+</div>
+</div>
+
+
+
+</div>
+
+
+<div id="photos">
+<img src="https://www.flyingmag.com/resizer/GCgbVjE8l9tv6JjzSG7V6VzN57I=/620x420/arc-anglerfish-arc2-prod-bonnier.s3.amazonaws.com/public/2OA4TLDZCVBK3QEC72XN3J52BY.jpg" width="200" height="200">
+
+<img src="https://img.bleacherreport.net/img/images/photos/003/869/668/hi-res-12f1daf6b3f44792ca1bf721a87633e0_crop_north.jpg?1590248758&w=3072&h=2048" width="200" height="200">
+
+<img src="https://pkimgcdn.peekyou.com/8ffb700553d232ecd22e7a3e0c3e80b7.jpeg" width="200"
+height="200">
+</div>
  
- <div id="love">
- 	<h2>Love</h2>
- 	<p>
- 		Shawty want a thug
-Bottles in the club
-Shawty wanna hump
-You know I love to touch ya lovely lady lumps
-Shawty wanna thug
-Bottles in the club
-Shawty wanna hump
-You know I love to touch ya lovely lady lumps
- 	</p>
-<br>
- <div class="moreinfo"><a href="">more info</a>
- 		
- 	</div>
-</div>
-
-
-
-
-
-
- <div id="youngthug">
- 	<h2>Youngthug</h2>
- 	<p>Okay, lil mama had a swag like mine
-She even wear her hair down her back like mine
-I make her feel right when it's wrong like lyin'
-Man, she ain't never had a love like mine
-But man, I ain't never seen an ass like hers
-That pussy in my mouth had me lost for words
-So I told her back it up like, "burp, burp"
-And made that ass jump like, "jerp, jerp"
-And that's when she</p>
-<br>
- 	<div class="moreinfo"><a href="">more info</a>
- 		</div>
-</div>
-
-
-
-
-<div id="poppa">
- 	<h2>Poppa</h2>
- 	<p>She, she, she licked me like a lollipop (oh yeah I like that)
-She, she licked me like a lollipop (oh yeah I like that)
-She, she, she licked me like a lollipop (I like that)
-She, she licked me like a lollipop</p>
-<br>
- 	<div class="moreinfo"><a href="">more info</a>
- 		</div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-	
-
-
-
-
-
-
-
-</body>
-</html>
+ 
