--- a/forreal.html
+++ b/forreal.html
@@ -12,10 +12,10 @@
 <header>
 	<h1>For Real Finances</h1>
 	<div id=link>
-	<a href="">Home</a>
-	<a href="">Product</a>
-	<a href="">Pricing </a>
-	<a href="">Contact</a>
+	<a class="so" href="">Home</a>
+	<a class="so" href="">Product</a>
+	<a class="so"href="">Pricing </a>
+	<a class="so" href="">Contact</a>
 	</div>
 	</header>
 
